--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,10 @@
 {
-  "name": "angular-tr-grid",
+  "name": "angular-ui-grid",
   "version": "3.0.0-rc.20",
+  "homepage": "http://ui-grid.info",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jafidelis/tr-grid.info.git"
+    "url": "https://github.com/angular-ui/ui-grid.info.git"
   },
   "authors": [
     "__Contributors__"
@@ -28,4 +29,3 @@
     "pdfmake": "~0.1.8",
     "csv-js": "https://github.com/c0bra/CSV-JS.git#~1.0.2"
   }
-}
